@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-07T00:48:11Z",
-  "count_outdated" : 192,
-  "uniques_outdated" : 165,
-  "count" : 203,
-  "uniques" : 175,
+  "timestamp" : "2023-10-09T08:14:53Z",
+  "count_outdated" : 193,
+  "uniques_outdated" : 166,
+  "count" : 204,
+  "uniques" : 176,
   "clones" : [
-    {
-      "timestamp": "2023-09-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-26T00:00:00Z",
       "count": 1,
@@ -79,6 +70,15 @@
     },
     {
       "timestamp": "2023-10-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
