@@ -3,11 +3,6 @@
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2023-09-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-09-26T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -44,6 +39,11 @@
     },
     {
       "timestamp": "2023-10-06T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-10-09T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
